# cub3d

./: CMakeLists.txt  Makefile  add_back_sprite.c  all_free.c  bmp.c  check_argv.c  check_direction_player.c  check_line.c  check_max_and_min_screensize.c  check_num_lines.c  check_player_sight.c  check_str.c  clear_flags.c  close_window.c  const_param.c  cub3d.c  cub3d.h  draw.c  draw_pixel_sprite.c  draw_sprite.c  errors.c  fill_struct.c  find_horizontal.c  find_sprites.c  find_vertical.c  flood_fill.c  free_double_arr.c  get_textures.c  keycode.c  map.cub  map.txt  map2.txt  min_length.c  move_sprite_in_list.c  my_mlx_pixel_put.c  new_sprite.c  parse_line.c  quarters.c  read_file.c  screenshot.c  (+5 more)
textures/: WALL74.xpm  WALL76.xpm  barrel.xpm
